[package]
name = "ocahce"
version = "0.1.0"
edition = "2024"

[dependencies]
ureq = { version = "2.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tiny_http = "0.12"
rand = "0.8"
crc32fast = "1.3"
log = "0.4.29"
env_logger = "0.11.8"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
